--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  h1, h2, h3, h4, h5, h6, p {
+    font-weight: 600;
+    margin: 0;
+  }
   
 
   /* ==================================== */
