--- a/src/components/Accordion/accordion.module.css
+++ b/src/components/Accordion/accordion.module.css
@@ -1,17 +1,17 @@
-.nile-accordion__container {
+.container {
   display: flex;
   flex-direction: column;
   gap: var(--size__16);
   min-width: 500px;
 }
 
-.nile-accordion__item {
+.item {
   border: 1px solid var(--colors__border__primary__borderprimaryhigh);
   border-radius: var(--rounded-xl);
   overflow: hidden;
 }
 
-.nile-accordion__header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -21,24 +21,24 @@
   padding-inline: var(--size__16);
 }
 
-.nile-accordion__item .nile-accordion__header {
+.item .header {
   padding-top: var(--size__12);
   padding-bottom: var(--size__12);
 }
 
-.nile-accordion__item.open .nile-accordion__header {
+.open .header {
   padding-top: var(--size__16);
   padding-bottom: var(--size__16);
 }
 
-.nile-accordion-header__text-wrapper {
+.headerTextWrapper {
   display: flex;
   flex-direction: column;
   gap: var(--size__4);
   width: 100%;
 }
 
-.nile-accordion-header__text-wrapper .nile-accordion__title {
+.headerTextWrapper .title {
   color: var(--colors__text__primary__texttitle);
   font-size: var(--typescale__16__size);
   line-height: var(--typescale__16__lineheight);
@@ -46,34 +46,34 @@
   letter-spacing: var(--typescale__16__tracking);
 }
 
-.nile-accordion-header__text-wrapper .nile-accordion__subtext {
+.headerTextWrapper .subtext {
   color: var(--colors__text__primary__textbody);
   font-size: var(--typescale__14__size);
   line-height: var(--typescale__14__lineheight);
   letter-spacing: var(--typescale__14__tracking);
 }
 
-.nile-accordion__icon {
+.icon {
   display: flex;
   justify-content: center;
-  color: var(--colors__icon__iconlow)
+  color: var(--colors__icon__iconlow);
 }
 
-.nile-accordion__content-wrapper {
+.contentWrapper {
   transition: max-height 0.4s ease-in-out;
   overflow: hidden;
   max-height: 0;
 }
 
-.nile-accordion__item.open .nile-accordion__content-wrapper {
+.open .contentWrapper {
   max-height: 500px;
 }
 
-.nile-accordion__content {
+.content {
   padding: 0 var(--size__16) var(--size__16) var(--size__16);
 }
 
-.content-dummy-wrapper {
+.contentDummyWrapper {
   display: flex;
   flex: 1 0 0;
   justify-content: center;
@@ -85,7 +85,7 @@
   border-radius: var(--rounded-lg);
 }
 
-.content-dummy-wrapper p {
+.contentDummyWrapper p {
   color: var(--colors__text__info__textinfo);
   font-size: var(--typescale__14__size);
   line-height: var(--typescale__14__lineheight);
