--- a/src/components/Avatar/avatar.module.css
+++ b/src/components/Avatar/avatar.module.css
@@ -48,7 +48,7 @@
   height: 100%;
   object-fit: cover;
 }
-.text {
+.initial {
   background-color: var(--colors__surface__info__bginfo);
   color: white;
   text-transform: uppercase;
